Fixed overflow issue for hero image when on narrow window.

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header {
     background-color: #f9faf8;
     border-radius: 16px;
     padding: 8px;
+    overflow: hidden;
 }
 
 .header-bot .header-left {
@@ -66,9 +67,8 @@ header {
 }
 
 .header-bot .image {
-    width: 400px;
-    height: 200px;
-    
+    width: 100%;
+    height: 250px;
 }
 
 .header-bot .button {
